--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,13 @@ minecraft-survival/.svn
 reflex-arena/data
 retrocycles/data
 rust/data
-steamcmd
+steamcmd/linux32
+steamcmd/linux64
+steamcmd/package
+steamcmd/public
+steamcmd/siteserverui
+steamcmd/steamcmd/linux32
+steamcmd/update_hosts_cached.vdf
 tf2/data
 trackmania-forever/*.zip
 trackmania-forever-rcon/.svn/*
