Fixed team issue on Tron

--- a/retrocycles/Dockerfile
+++ b/retrocycles/Dockerfile
@@ -12,6 +12,7 @@ COPY --chown=steam:steam data /retrocycles
 WORKDIR /retrocycles
 
 COPY --chown=steam:steam autoexec.cfg usr/etc/games/Retrocycles-dedicated/autoexec.cfg
+COPY --chown=steam:steam server_info.cfg usr/etc/games/Retrocycles-dedicated/server_info.cfg
 COPY --chown=steam:steam entrypoint.sh entrypoint.sh
 
 RUN chmod +x entrypoint.sh
