--- a/retrocycles/autoexec.cfg
+++ b/retrocycles/autoexec.cfg
@@ -15,11 +15,12 @@
 
 SERVER_NAME $SERVER_NAME
 MASTER_PORT $MASTER_PORT
-SP_TEAM_BALANCE_WITH_AIS $SP_TEAM_BALANCE_WITH_AIS
-SP_MIN_PLAYERS $SP_MIN_PLAYERS
-SP_NUM_AIS $SP_NUM_AIS
+SP_TEAM_BALANCE_WITH_AIS $TEAM_BALANCE_WITH_AIS
+SP_MIN_PLAYERS $MIN_PLAYERS
+MIN_PLAYERS $MIN_PLAYERS
+SP_NUM_AIS $NUM_AIS
 MESSAGE_OF_DAY $MESSAGE_OF_DAY
-SP_SIZE_FACTOR $SP_SIZE_FACTOR
+SP_SIZE_FACTOR $SIZE_FACTOR
 
 RESOURCE_REPOSITORY_SERVER	http://resource.armagetronad.net/resource/ # default resource repository, determined by the server
 RESOURCE_REPOSITORY_CLIENT	http://resource.armagetronad.net/resource/ # fallback resource repository determined on the client (no use changing it on the server)
@@ -403,10 +404,10 @@ ENEMY_SUICIDE_TIMEOUT 10000.0   # If no enemy influence can be found for the las
 
 # for single player highscore hunt on this server:
 
-SP_SCORE_WIN $SP_SCORE_WIN       # points you gain for being last one alive
-SP_LIMIT_SCORE $SP_LIMIT_SCORE # score limit (all limits for one match)
-SP_LIMIT_ROUNDS $SP_LIMIT_ROUNDS     # max number of rounds to play
-SP_LIMIT_TIME   $SP_LIMIT_TIME    # max time (in minutes)
+SP_SCORE_WIN $SCORE_WIN       # points you gain for being last one alive
+SP_LIMIT_SCORE $LIMIT_SCORE # score limit (all limits for one match)
+SP_LIMIT_ROUNDS $LIMIT_ROUNDS     # max number of rounds to play
+SP_LIMIT_TIME   $LIMIT_TIME    # max time (in minutes)
 
 COLOR_STRINGS 1             # Generate strings that will be rendered with color effects.
 FILTER_COLOR_STRINGS 0      # Filter color codes from all strings coming in over the network.
@@ -681,3 +682,11 @@ CYCLE_RUBBER_MALUS_TIME 5                       # but the effect wears off after
 # their value is the ratio of lost packets on receiving and sending; 1.0 loses every packet.
 SIMULATE_RECEIVE_PACKET_LOSS 0.0
 SIMULATE_SEND_PACKET_LOSS 0.0
+
+TEAM_MAX_PLAYERS $TEAM_MAX_PLAYERS
+
+LIMIT_SCORE $LIMIT_SCORE # score limit (all limits for one match)
+LIMIT_ROUNDS $LIMIT_ROUNDS     # max number of rounds to play
+LIMIT_TIME   $LIMIT_TIME    # max time (in minutes)
+
+ADMIN_PASSWORD $RCON_PASSWORD
