--- a/ioquake3/Dockerfile
+++ b/ioquake3/Dockerfile
@@ -1,27 +1,12 @@
-FROM almalinux:latest
+FROM base
 MAINTAINER LAN-slide
 
-RUN useradd ioq3srv && mkdir /ioquake3 && chown ioq3srv:ioq3srv /ioquake3
+RUN useradd ioquake3 && mkdir /home/ioquake3 && chown ioquake3 /home/ioquake3 /home/
 
-RUN yum update -y && yum install -y epel-release
-    
-#glibc.i686 \
-#    libstdc++.i686 \
+USER ioquake3
 
-RUN yum install -y \
-    git \
-    gcc \
-    make \
-    wget \ 
-    unzip \
-    python39 \
-    python39-pip
-
-RUN pip3.9 install asyncio opengsq
-
-USER ioq3srv
-
-WORKDIR /ioquake3
+WORKDIR /home/ioquake3
+ENV COPYDIR=/home/ioquake3
 
 # RUN git clone https://github.com/nrempel/q3-server.git
 
@@ -29,20 +14,18 @@ RUN wget https://raw.githubusercontent.com/ioquake/ioq3/master/misc/linux/server
 
 RUN chmod +x server_compile.sh
 
-RUN sh -c 'yes | ./server_compile.sh' && chown ioq3srv:ioq3srv ~/ioquake3 -R
+RUN sh -c 'yes | ./server_compile.sh' && rm -f server_compile.sh
 
 RUN wget https://files.ioquake3.org/quake3-latest-pk3s.zip && unzip quake3-latest-pk3s.zip
 
-RUN cp /ioquake3/quake3-latest-pk3s/* ~/ioquake3/ -r
-
-WORKDIR /home/ioq3srv/ioquake3
+RUN cp ./quake3-latest-pk3s/* . -r && rm -rf ./quake3-latest-pk3s/ quake3-latest-pk3s.zip
 
 RUN wget -P baseq3 https://github.com/nrempel/q3-server/raw/master/baseq3/pak0.pk3
 
-COPY --chown=ioq3srv:ioq3srv baseq3/server.cfg baseq3/server.cfg
-COPY --chown=ioq3srv:ioq3srv entrypoint.sh entrypoint.sh
-COPY --chown=ioq3srv:ioq3srv stats.py stats.py
+COPY --chown=ioquake3:ioquake3 baseq3/server.cfg baseq3/server.cfg
+COPY --chown=ioquake3:ioquake3 entrypoint.sh entrypoint.sh
+COPY --chown=ioquake3:ioquake3 stats.py stats.py
 
 RUN chmod +x entrypoint.sh
 
-ENTRYPOINT /home/ioq3srv/ioquake3/entrypoint.sh
+ENTRYPOINT /home/ioquake3/entrypoint.sh
