--- a/hl2/Dockerfile
+++ b/hl2/Dockerfile
@@ -1,18 +1,7 @@
-FROM almalinux:latest
+FROM base
 MAINTAINER LAN-slide
 
 RUN useradd steam && mkdir /hl2 && chown steam:steam /hl2
-
-RUN yum update -y && yum install -y epel-release
-
-RUN yum install -y \
-    glibc.i686 \
-    libstdc++.i686 \
-    zlib.i686 \
-    python39 \ 
-    python39-pip 
-
-RUN pip3.9 install asyncio opengsq
 
 USER steam
 
