--- a/minecraft-build/Dockerfile
+++ b/minecraft-build/Dockerfile
@@ -36,11 +36,10 @@ RUN unzip mv.zip
 RUN wget https://ci.dmulloy2.net/job/ProtocolLib/lastStableBuild/artifact/build/libs/ProtocolLib.jar
 RUN wget -O luckPerm.zip https://ci.lucko.me/view/LuckPerms/job/LuckPerms/lastSuccessfulBuild/artifact/bukkit/loader/build/libs/*zip*/libs.zip
 RUN unzip luckPerm.zip
-RUN wget https://dynmap.us/releases/Dynmap-3.5-beta-2-spigot.jar
+RUN wget https://dynmap.us/releases/Dynmap-3.6-spigot.jar
 RUN wget https://github.com/MilkBowl/Vault/releases/download/1.7.3/Vault.jar
 RUN wget https://github.com/PryPurity/WorldBorder/releases/download/v2.1.5/WorldBorder.jar
-#RUN wget -O worldedit.jar https://dev.bukkit.org/projects/worldedit/files/latest
-RUN wget -O worldedit.jar https://edge.forgecdn.net/files/4162/203/worldedit-bukkit-7.2.13.jar?api-key=267C6CA3
+RUN wget -O worldedit.jar https://dev.bukkit.org/projects/worldedit/files/latest
 #RUN wget https://github.com/kangarko/ChatControl-Pro/releases/download/8.10.5/ChatControl-8.10.5.jar
 ## Moved to Premium version see README for more details
 
