--- a/minecraft-survival/Dockerfile
+++ b/minecraft-survival/Dockerfile
@@ -8,7 +8,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1au.\2/" /etc/a
     && apt-get install -y software-properties-common \ 
     && apt-add-repository ppa:openjdk-r/ppa && \
        apt-get update
-RUN apt-get install -y ca-certificates-java
+RUN apt-get install -y ca-certificates-java zip
 RUN echo "yes" | apt-get install -y openjdk-${JAVA_VERSION}-jdk
 RUN adduser spigot && mkdir /spigot && chown spigot:spigot /spigot -R
 WORKDIR /spigot
@@ -24,10 +24,20 @@ RUN wget -O BuildTools.jar \
     https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar && \
     java -jar BuildTools.jar --rev $SPIGOT_VERSION
 
+# Download Deathrun
+RUN wget -O Deathrun.zip \ 
+    "https://pcminecraft-mods.com/wp-content/uploads/2023/06/Deathrun_Ultimate_II.zip" && \ 
+    unzip Deathrun.zip "Deathrun Ultimate II/*" -d "deathrun" && \
+    rm Deathrun.zip
+   #  unzip Deathrun2.zip -d /spitgot && rm Deathrun*.zip -f
+
 FROM jdk as final
 ADD server.properties commands.yml start.sh stats.py advertise.py /spigot/
 #COPY plugins plugins/
 COPY --from=build /build/spigot-*.jar .
+COPY --from=build /build/deathrun . 
+
+RUN mv "/spigot/Deathrun Ultimate II/" /spigot/deathrun
 
 RUN echo "eula=true" > eula.txt
 
@@ -35,7 +45,4 @@ RUN apt-get install nano
 RUN chown spigot:spigot * -R
 USER spigot
 
-# This fails,
-# RUN java -Xms1G -Xmx1G -jar minecraft_server.1.10.2.jar nogui
-# TODO: create server.properties, and an eula.txt
 CMD ["./start.sh"]
