--- a/l4d2/Dockerfile
+++ b/l4d2/Dockerfile
@@ -9,7 +9,7 @@ RUN useradd steam && mkdir /l4d2 && chown steam:steam /l4d2
 USER steam
 
 COPY --chown=steam:steam data /l4d2
-COPY --from=sourcemod --chown=steam:steam /csgo /l4d2/left4dead2/
+COPY --from=sourcemod --chown=steam:steam /cs2 /l4d2/left4dead2/
 
 WORKDIR /l4d2
 
