--- a/ioquake3/baseq3/server.cfg
+++ b/ioquake3/baseq3/server.cfg
@@ -5,20 +5,20 @@ sets ".www" "lanslide.com.au"
 
 // Server info
 seta sv_hostname "$SERVER_NAME"
-seta g_motd "Welcome to LAN-slide"
+seta g_motd "$MOTD"
 
 // Slots
 seta sv_maxClients $MAX_PLAYERS
-seta sv_privateClients 0
-// seta sv_privatePassword "" 
+seta sv_privateClients $SV_PRIVATECLIENTS
+seta sv_privatePassword "$PASSWORD" 
 seta g_syncronousClients 0
 seta g_allowvote 1
 
 // Game settings
 seta g_quadfactor 4
-seta g_gametype 0
-seta timelimit 15
-seta fraglimit 50
+seta g_gametype $GAME_TYPE
+seta timelimit $TIMELIMIT
+seta fraglimit $FRAGLIMIT
 seta g_weaponrespawn 3
 seta g_inactivity 3000
 
@@ -42,7 +42,7 @@ seta sv_master1 "master0.gamespy.com:28900"
 seta sv_master2 "master.gamershut.de:27950"
 seta sv_master3 "master.gnw.de:27950"
 seta sv_master4 "master3.idsoftware.com:27950"
-seta rconpassword "pipelion"
+seta rconpassword "$RCON_PASSWORD"
 
 // Maps
 set d1 "map q3dm1 ; set nextmap vstr d2"
