--- a/minecraft-base/Dockerfile
+++ b/minecraft-base/Dockerfile
@@ -24,7 +24,8 @@ RUN wget -O BuildTools.jar \
     https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar && \
     java -jar BuildTools.jar --rev $SPIGOT_VERSION
 
-RUN wget https://dynmap.us/releases/Dynmap-3.6-spigot.jar
+RUN wget https://cdn.modrinth.com/data/fRQREgAc/versions/UXqPUg7D/Dynmap-3.7-beta-2-spigot.jar
+#https://dynmap.us/releases/Dynmap-3.6-spigot.jar
 
 FROM jdk as final
 ADD server.properties advertise.py stats.py /spigot/
