--- a/zdaemon/ffa-template.cfg
+++ b/zdaemon/ffa-template.cfg
@@ -70,8 +70,8 @@ set email                 ""
 // 16. The maxplayers variable should never exceed the maxclients variable for
 // obvious reasons.
 
-//set maxclients            24
-//set maxplayers            20
+set maxclients            16
+set maxplayers            16
 
 // This variable is used to reset the current map to it's original state if all
 // players leave the server. Useful for 1-on-1 servers with no time limit. This
