Updated retrocycles config

--- a/retrocycles/server_info.cfg
+++ b/retrocycles/server_info.cfg
@@ -1,6 +1,5 @@
 GLOBAL_ID   1                      # Enable external authentication authorities
-USER_LEVEL  Nuke@lanslide 0        # Grant user "itsme" from forums.armagetronad.net "Owner" privileges
-                                   # Login in-game by typing:  /login forums
+USER_LEVEL Nuke@lt 0              
 
 TRUST_LAN   1                      # Allow login via local network (LAN)
 LOCAL_USER  Nuke lanslide          # Define username and password
