--- a/cs2-base/Dockerfile
+++ b/cs2-base/Dockerfile
@@ -3,6 +3,8 @@ FROM base
 
 RUN useradd -m steam && mkdir /cs2 && chown steam:steam /cs2
 
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
+
 USER steam
 WORKDIR /cs2
 
