--- a/cs2-wingman/defaultenv.ini
+++ b/cs2-wingman/defaultenv.ini
@@ -1,7 +1,9 @@
 [env]
 HOSTNAME=CS2 Wingman Server
 TEAM1=None
+TEAM1_ID=None
 TEAM2=None
+TEAM2_ID=None
 STEAMTOKEN=None
 TICKRATE=128
 GAME_TYPE=0
@@ -13,7 +15,11 @@ MAP=de_dust2
 TV_ENABLE=False
 TV_NAME=None
 EVENT_NAME=None
-MATCH_NO=None
+MATCH_ID=None
+NUM_MAPS=1
+TEAM_MODE=0
+ALLOW_SUICIDE=True
+VETO_MAP=None
 PORT=27015
 SV_PASSWORD=None
 SV_LAN=False
