--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 7days/data
 altitude/data
+counter-strike-sharp/addons
+counter-strike-sharp/cfg
+counter-strike-sharp/Lanslide
 cs2-base/data
 cs2-base/steamclient.so
 csgo-base/data
