--- a/cs2-base/Dockerfile
+++ b/cs2-base/Dockerfile
@@ -8,6 +8,6 @@ ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
 USER steam
 WORKDIR /cs2
 
-COPY --chown=steam:steam config_admins.py config_match.py container.py ./
+COPY --chown=steam:steam config_admins.py config_match.py config_server.py container.py ./
 COPY --chown=steam:steam data ./
 COPY --chown=steam:steam steamclient.so /home/steam/.steam/sdk64/steamclient.so
