--- a/cs2-vanilla/Dockerfile
+++ b/cs2-vanilla/Dockerfile
@@ -8,8 +8,7 @@ USER steam
 WORKDIR /cs2
 
 COPY --chown=steam:steam entrypoint.py defaultenv.ini stats.py /cs2/
-
-RUN rm /cs2/config_match.py && rm /cs2/config_server.py && rm /cs2/config_admins.py
+COPY --chown=steam:steam cfg /cs2/game/csgo/cfg
 
 ENV PYTHONUNBUFFERED=0
 RUN chmod +x entrypoint.py
