--- a/counter-strike-sharp/Dockerfile
+++ b/counter-strike-sharp/Dockerfile
@@ -11,9 +11,9 @@ RUN curl -s https://mms.alliedmods.net/mmsdrop/2.0/mmsource-2.0.0-git1281-linux.
 
 RUN wget $(wget -q -O - https://api.github.com/repos/shobhit-pathak/MatchZy/releases/latest | jq -r '.assets[] | select(.name | contains ("with-cssharp")) | .browser_download_url') -O matchzy.zip && unzip matchzy.zip -d /css && rm matchzy.zip -f
 
-#RUN css_latest=$(curl -s "https://api.github.com/repos/roflmuffin/CounterStrikeSharp/releases/latest" | grep -E "runtime.*linux.*zip" | cut -d : -f 2,3 | tr -d \" | sed -n '2p') && \
-#    wget -nc ${css_latest} -O css.zip && unzip css.zip -d /css && rm css.zip -f
+#RUN css_latest=$(curl -s "https://api.github.com/repos/roflmuffin/CounterStrikeSharp/releases/latest" | grep -E "runtime.*linux.*zip" | cut -d : -f 2,3 | tr -d \" | sed -n '2p') && wget -nc ${css_latest} -O css.zip && unzip css.zip -d /css && rm css.zip -f
 
 #COPY addons /css/addons
 #COPY cfg /css/cfg
 COPY Lanslide /css/addons/counterstrikesharp/plugins/Lanslide
+COPY MatchZy /css/addons/counterstrikesharp/plugins/MatchZy
