--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 altitude/data
 counter-strike-sharp/addons
 counter-strike-sharp/cfg
+counter-strike-sharp/MatchZy
 cs2-base/data
 cs2-base/steamclient.so
 csgo-base/data
