--- a/cs2-wingman/defaultenv.ini
+++ b/cs2-wingman/defaultenv.ini
@@ -41,3 +41,4 @@ SKIP_VETO=0
 VETO_MODE=team1_ban,team2_ban,team1_ban,
 VETO_FIRST=team1
 VETO_MAP_POOL=de_inferno,de_nuke,de_overpass,de_vertigo,
+ENABLE_MATCH_SCRIM=False
