--- a/cs2-comp/defaultenv.ini
+++ b/cs2-comp/defaultenv.ini
@@ -39,3 +39,4 @@ SKIP_VETO=0
 VETO_MODE=team1_ban,team2_ban,team1_ban,team2_ban,team1_ban,team2_ban,
 VETO_FIRST=team1
 VETO_MAP_POOL=de_ancient,de_anubis,de_inferno,de_mirage,de_nuke,de_overpass,de_vertigo,
+ENABLE_MATCH_SCRIM=False
