--- a/cs2-vanilla/defaultenv.ini
+++ b/cs2-vanilla/defaultenv.ini
@@ -18,9 +18,26 @@ EVENT_NAME=None
 MATCH_ID=None
 NUM_MAPS=1
 TEAM_MODE=0
-ALLOW_SUICIDE=True
-VETO_MAP=None
 PORT=27015
 SV_PASSWORD=None
 SV_LAN=False
 SERVERCFGFILE=None
+IS_WINGMAN=0
+
+MIN_PLAYERS_TO_READY=10
+ENABLE_KNIFE=True
+ENABLE_STOP_COMMAND=True
+PLAYOUT_ENABLED=True
+DEMO_UPLOAD_URL=https://portal.lanslide.com.au/g5-demo-upload
+AUTOSTART_MODE=1
+USE_PAUSE_FOR_TECH=False
+FREEZETIME=20
+OVERTIME_STARTMONEY=12500
+CLINCH_SERIES=1
+MIN_SPECTATORS_TO_READY=0
+SIDE_TYPE=always_knife,
+SKIP_VETO=0
+VETO_MODE=team1_ban,team2_ban,team1_ban,team2_ban,team1_ban,team2_ban,
+VETO_FIRST=team1
+VETO_MAP_POOL=de_ancient,de_anubis,de_inferno,de_mirage,de_nuke,de_overpass,de_vertigo,
+ENABLE_MATCH_SCRIM=False
