--- a/cs2-vanilla/Dockerfile
+++ b/cs2-vanilla/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /cs2
 
 COPY --chown=steam:steam entrypoint.py defaultenv.ini stats.py /cs2/
 COPY --chown=steam:steam cfg /cs2/game/csgo/cfg
+COPY --chown=steam:steam team-logos /cs2/game/csgo/resource/flash/econ/tournaments/teams
 
 ENV PYTHONUNBUFFERED=0
 RUN chmod +x entrypoint.py
