--- a/cs2-wingman/cfg/server.cfg
+++ b/cs2-wingman/cfg/server.cfg
@@ -1,5 +1,5 @@
 // Server cvars
-sv_lan 1
+// sv_lan 1
 sv_cheats 0
 sv_holiday_mode 0
 sv_region 5
@@ -15,8 +15,8 @@ mp_teamflag_1 AU
 mp_teamflag_2 AU
 
 //CSTV cvars
-#tv_enable 1
-#tv_enable1 1
+tv_enable 1
+tv_enable1 1
 tv_delay 0
 tv_delay1 7
 tv_dispatchmode 1
