--- a/cs2-comp/Dockerfile
+++ b/cs2-comp/Dockerfile
@@ -2,15 +2,16 @@ FROM cs2-base
 MAINTAINER LAN-slide
 
 USER root
-RUN mkdir -p /game/csgo/replays && chown -R steam:steam  /game/csgo/replays && chmod a+rwX /game/csgo/replays
+RUN mkdir -p /cs2/game/csgo/replays && chown -R steam:steam  /cs2/game/csgo/replays && chmod a+rwX /cs2/game/csgo/replays
 
-USER steam
 WORKDIR /cs2
 
 # Get counter-strike-source files
 COPY --from=counter-strike-sharp --chown=steam:steam /config_admins.py /cs2
 COPY --from=counter-strike-sharp --chown=steam:steam /config_match.py /cs2
 COPY --from=counter-strike-sharp --chown=steam:steam /css /cs2/game/csgo
+
+USER steam
 
 RUN sed -i "/Game_LowViolence/a\ \t\t\tGame\tcsgo/addons/metamod" /cs2/game/csgo/gameinfo.gi
 
