--- a/cs2-comp/defaultenv.ini
+++ b/cs2-comp/defaultenv.ini
@@ -24,13 +24,6 @@ SV_LAN=False
 SERVERCFGFILE=None
 IS_WINGMAN=0
 
-MIN_PLAYERS_TO_READY=10
-ENABLE_KNIFE=True
-ENABLE_STOP_COMMAND=True
-PLAYOUT_ENABLED=True
-DEMO_UPLOAD_URL=https://portal.lanslide.com.au/g5-demo-upload
-AUTOSTART_MODE=1
-USE_PAUSE_FOR_TECH=False
 FREEZETIME=20
 OVERTIME_STARTMONEY=12500
 CLINCH_SERIES=1
@@ -40,4 +33,30 @@ SKIP_VETO=0
 VETO_MODE=team1_ban,team2_ban,team1_ban,team2_ban,team1_ban,team2_ban,
 VETO_FIRST=team1
 VETO_MAP_POOL=de_ancient,de_anubis,de_inferno,de_mirage,de_nuke,de_overpass,de_vertigo,
+
+WHITELIST_ENABLED=False
+ENABLE_KNIFE=True
+MIN_PLAYERS_TO_READY=10
+DEMO_PATH=LAN_DEMOS
+DEMO_NAME_FORMAT={TIME}_{MATCH_ID}_{MAP}_{TEAM1}_vs_{TEAM2}
+ENABLE_STOP_COMMAND=True
+USE_PAUSE_COMMAND_FOR_TAC=False
+ENABLE_TECH_PAUSE=True
+TECH_PAUSE_DURATION=300
+MAX_TECH_PAUSES=2
+PAUSE_AFTER_RESTORE=True
+ADMIN_CHAT_PREFIX=[{Red}ADMIN{Default}]
+CHAT_MESSAGES_TIMER_DELAY=13
+PLAYOUT_ENABLED=True
+KICK_WHEN_NO_MATCH=False
+RESET_CVARS_ON_SERIES_END=True
+DEMO_UPLOAD_URL=https://portal.lanslide.com.au/g5-demo-upload
+AUTOSTART_MODE=1
+SAVE_NADES_AS_GLOBAL=False
+ALLOW_FORCE_READY=True
+MAX_SAVED_LAST_GRENADE=512
+SMOKE_COLOR_ENABLED=False
+EVERYONE_IS_ADMIN=False
+SHOW_CREDITS_AT_MATCH_START=True
 ENABLE_MATCH_SCRIM=False
+
