--- a/counter-strike-sharp/Dockerfile
+++ b/counter-strike-sharp/Dockerfile
@@ -15,7 +15,8 @@ RUN curl -s https://mms.alliedmods.net/mmsdrop/2.0/mmsource-2.0.0-git1313-linux.
 #RUN wget -nc ${css_latest} -O css.zip && unzip css.zip -d /css && rm css.zip -f
 
 #RUN matchzy=$(curl -s "https://api.github.com/repos/shobhit-pathak/MatchZy/releases/latest" | grep -E "with-cssharp-linux.*zip" | cut -d : -f 2,3 | tr -d \" | sed -n '2p' | xargs)
-ARG matchzy="https://github.com/shobhit-pathak/MatchZy/releases/download/0.7.13/MatchZy-0.7.13-with-cssharp-linux.zip"
+ARG version="0.8.5"
+ARG matchzy="https://github.com/shobhit-pathak/MatchZy/releases/download/${version}/MatchZy-${version}-with-cssharp-linux.zip"
 RUN wget -nc ${matchzy} -O m.zip && unzip m.zip -d /css && rm m.zip -f
 
 #COPY addons /css/addons`
