--- a/cs2-wingman/defaultenv.ini
+++ b/cs2-wingman/defaultenv.ini
@@ -40,6 +40,7 @@ MIN_PLAYERS_TO_READY=4
 DEMO_PATH=LAN_DEMOS
 DEMO_NAME_FORMAT={TIME}_{MATCH_ID}_{MAP}_{TEAM1}_vs_{TEAM2}
 ENABLE_STOP_COMMAND=True
+ENABLE_STOP_NO_DAMAGE=False
 USE_PAUSE_COMMAND_FOR_TAC=False
 ENABLE_TECH_PAUSE=True
 TECH_PAUSE_DURATION=300
@@ -57,6 +58,9 @@ ALLOW_FORCE_READY=True
 MAX_SAVED_LAST_GRENADE=512
 SMOKE_COLOR_ENABLED=False
 EVERYONE_IS_ADMIN=False
+HOSTNAME_FORMAT=None
+ENABLE_DAMAGE_REPORT=True
+MATCH_START_MESSAGE=None
 SHOW_CREDITS_AT_MATCH_START=True
 ENABLE_MATCH_SCRIM=False
 
