--- a/cs2-comp/cfg/server.cfg
+++ b/cs2-comp/cfg/server.cfg
@@ -15,17 +15,17 @@ mp_teamflag_1 AU
 mp_teamflag_2 AU
 
 //CSTV cvars
-tv_enable 1
-tv_enable1 1
-tv_delay 0
-tv_delay1 7
-tv_dispatchmode 1
-tv_delaymapchange 1
-tv_nochat 1
-tv_show_allchat 0
-tv_relayvoice 0
-tv_relayradio 0
-tv_advertise_watchable 0
+//tv_enable 1
+//tv_enable1 1
+//tv_delay 0
+//tv_delay1 7
+//tv_dispatchmode 1
+//tv_delaymapchange 1
+//tv_nochat 1
+//tv_show_allchat 0
+//tv_relayvoice 0
+//tv_relayradio 0
+//tv_advertise_watchable 0
 
 //Log cvars
 log on
