--- a/cs2-wingman-vanilla/defaultenv.ini
+++ b/cs2-wingman-vanilla/defaultenv.ini
@@ -14,6 +14,10 @@ MAP_GROUP=mg_active
 MAP=de_dust2
 TV_ENABLE=False
 TV_NAME=None
+TV_DELAY=0
+TV_DELAY1=7
+TV_PASSWORD=sadge
+TV_RELAYPASSWORD=relaypwdsadge
 EVENT_NAME=None
 MATCH_ID=None
 NUM_MAPS=1
