--- a/cs2-wingman/cfg/gamemode_competitive2v2_server.cfg
+++ b/cs2-wingman/cfg/gamemode_competitive2v2_server.cfg
@@ -118,3 +118,5 @@ sv_pure_trace 0					// If set to 1, the server will print a message whenever a c
 sv_spawn_afk_bomb_drop_time 30                 	// Players that spawn and don't move for longer than sv_spawn_afk_bomb_drop_time (default 15 seconds) will automatically drop the bomb.
 sv_steamgroup_exclusive 0                     	// If set, only members of Steam group will be able to join the server when it's empty, public people will be able to join the server only if it has players.
 sv_voiceenable 0
+
+exec live_wingman.cfg
