--- a/cs2-comp/defaultenv.ini
+++ b/cs2-comp/defaultenv.ini
@@ -16,7 +16,7 @@ TV_ENABLE=False
 TV_NAME=None
 TV_DELAY=0
 TV_DELAY1=7
-TV_PASSWORD=sadge
+TV_PASSWORD=None
 TV_RELAYPASSWORD=relaypwdsadge
 EVENT_NAME=None
 MATCH_ID=None
