--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ altitude/data
 counter-strike-sharp/addons
 counter-strike-sharp/cfg
 counter-strike-sharp/MatchZy
+cs-base/data
 cs2-base/data
 cs2-base/steamclient.so
 csgo-base/data
