--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 ARG TZ="Etc/UTC"
 RUN sed -i 's/archive.ubuntu.com/au.archive.ubuntu.com/' /etc/apt/sources.list
 RUN apt-get update  && apt-get dist-upgrade -y && apt-get install -y software-properties-common && add-apt-repository ppa:jonathonf/vim && \
-        apt-get install -y git gcc make unzip p7zip-full curl wget iproute2 vim bzip2 jq software-properties-common apt-transport-https python3 python3-pip libc6 lib32stdc++6 lib32gcc-s1 lib32z1 libicu-dev && \
+        apt-get install -y git gcc make gdb unzip p7zip-full curl wget iproute2 vim bzip2 jq software-properties-common apt-transport-https python3 python3-pip libc6 lib32stdc++6 lib32gcc-s1 lib32z1 libicu-dev && \
         apt-get clean
 
 RUN pip3 install asyncio opengsq rcon
